changed graph... added single facet filter.
Signed-off-by: Jim Klo <jim.klo@sri.com>

--- a/LR/lr/public/repofringe/app.css
+++ b/LR/lr/public/repofringe/app.css
@@ -26,3 +26,8 @@ a:link    {color:#fff;}
 a:visited {color:#fff;}
 a:hover   {color:#fff;}
 a:active  {color:#fff;}
+
+.tip { background-color: #fff;
+       padding: 4px; }
+.tip-text {color:#000;}
+.tip-title {color:#000;}
